# source-code

./: .dockerignore  .gitignore  BACKLOG.md  CNAME  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  _config.yml  index.html
.github/workflows/: ci.yml  edge.yml  release.yml
_includes/: footer.html  head-custom.html  head.html  mermaid.html  nav.html  sidebar.html
_layouts/: doc.html  home.html
assets/css/: site.css
assets/js/: site.js
charts/apd/: Chart.yaml  README.md  values.yaml
charts/apd/ci/: dev-values.yaml
charts/apd/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
crates/aauth-core/: Cargo.toml
crates/aauth-core/src/: b64.rs  ident.rs  jwk.rs  jwt.rs  lib.rs  sfv.rs  sig.rs  sigkey.rs  tokens.rs
crates/apd/: Cargo.toml
crates/apd/src/: app.rs  audit.rs  config.rs  httpc.rs  issue.rs  jwks_cache.rs  keys.rs  main.rs  problem.rs  records.rs  reqctx.rs  router.rs  storage.rs  telemetry.rs  tests.rs
crates/apd/src/enrollment/: anyjwk.rs  assertion.rs  issuer_keys.rs  mod.rs  x509.rs
crates/apd/src/handlers/: admin.rs  agent.rs  events.rs  mod.rs  wellknown.rs
docs/: api.md  configuration.md  deployment.md  enrollment.md  federated-enrollment-design.md  federated-enrollment.md  guide-ai-agent-auth.md  guide-mcp-server-auth.md
research/: 01-aauth-protocol-overview.md  02-agent-provider.md  03-http-signatures.md  04-connecting-agents.md  05-connecting-resources-mcp.md  06-events.md  README.md
