[package]
name = "aauth-core"
description = "AAuth protocol primitives: JWK/JWKS, EdDSA JWTs, agent identifiers, RFC 8941 structured fields (subset), RFC 9421 HTTP Message Signatures, Signature-Key schemes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
getrandom.workspace = true
